--- a/hackaton.Rmd
+++ b/hackaton.Rmd
@@ -9,6 +9,15 @@ output: html_document
 library(tidyverse)
 
 ```
+#Чтение данных
+
+```{r}
+insurance_data <- read_csv("data/HealthInsurance.csv")
+
+insurance_data %>% 
+  summary()
+
+```
 
 
 
