--- a/hackaton.Rmd
+++ b/hackaton.Rmd
@@ -19,6 +19,22 @@ insurance_data %>%
 
 ```
 
+#Описание данных
+Сформировать таблицы с базовыми описательными статистиками.
+
+
+
+#Визуализация данных
+Визуализировать распределения значений признаков средствами ggplot2 и сопутствующих пакетов.
+Подобрать и реализовать средства для визуальной оценки взаимосвязи между наличием МС и собранными признаками пациентов.
+
+
+#Анализ данных
+Выбрать и реализовать методы однофакторного анализа для количественной оценки взаимосвязи между наличием МС и собранными признаками пациентов (помните, что взаимосвязь - это не только p-значения, но и доверительные интервалы!).
+
+
+
+
 
 
 
