--- a/hackaton.Rmd
+++ b/hackaton.Rmd
@@ -9,6 +9,12 @@ output: html_document
 library(tidyverse)
 library(gtsummary)
 library(forcats)
+library(tidyverse)
+library(ggplot2)
+library(gridExtra)
+library(patchwork)
+library(ggrepel)
+library(ggthemes)
 ```
 #Чтение данных
 
@@ -118,6 +124,14 @@ table_1
 Визуализировать распределения значений признаков средствами ggplot2 и сопутствующих пакетов.
 Подобрать и реализовать средства для визуальной оценки взаимосвязи между наличием МС и собранными признаками пациентов.
 
+```{r}
+
+```
+
+
+```{r}
+
+```
 
 #Анализ данных
 Выбрать и реализовать методы однофакторного анализа для количественной оценки взаимосвязи между наличием МС и собранными признаками пациентов (помните, что взаимосвязь - это не только p-значения, но и доверительные интервалы!).
