--- a/hackaton.Rmd
+++ b/hackaton.Rmd
@@ -15,6 +15,11 @@ library(gridExtra)
 library(patchwork)
 library(ggrepel)
 library(ggthemes)
+
+library(flextable)
+library(epitools)
+
+set_flextable_defaults(table.layout = "autofit")
 ```
 #Чтение данных
 
@@ -246,6 +251,82 @@ plot_categorical(insurance_data)
 
 #Анализ данных
 Выбрать и реализовать методы однофакторного анализа для количественной оценки взаимосвязи между наличием МС и собранными признаками пациентов (помните, что взаимосвязь - это не только p-значения, но и доверительные интервалы!).
+
+Исследование кросс-секционное. Для оценки независимости групп будет использован тест хи-квадрат, для оценки силы ассоциации среди категориальных переменных будет использован RR.
+
+```{r}
+insurance_data %>% 
+  mutate(insurance = ifelse(insurance == "no", "Нет страховки", "Есть страховка")) -> insurance_data
+```
+
+
+##Пол и страховка
+```{r}
+insurance_data %>% 
+  select(c("gender", "insurance")) %>% 
+  table %>% 
+  as.data.frame.matrix -> gend_table
+
+gend_table <- cbind("Пол" = rownames(gend_table), gend_table)
+rownames(gend_table) <- NULL
+
+
+ft_gend <- flextable(gend_table)
+ft_gend <- autofit(ft_gend)
+ft_gend <- theme_vanilla(ft_gend)
+ft_gend <- add_header_lines(ft_gend, values = "Гендер и наличие страховки")
+ft_gend <- align(ft_gend, i = 1, part = "header", align = "center")
+ft_gend
+```
+
+
+```{r}
+insurance_data %>% 
+  select(c("gender", "insurance")) %>% 
+  table %>% 
+  chisq.test() -> gend
+
+cat("Проверка гипотезы о независимости пола и наличия страховки\n")
+gend$method
+cat("P-value:")
+gend$p.value
+cat("Отклоняем нулевую гипотезу о независимости пола и наличия страховки")
+
+```
+Сила ассоциации
+```{r}
+insurance_data %>% 
+  select(c("gender", "insurance")) %>% 
+  table %>% 
+  riskratio(., rev = "both") -> rr_gender
+
+rr_gender$measure
+cat("RR показывает, что у женщин есть страховка в 1.067 раз чаще")
+
+```
+
+
+##Семейное положение и страховка
+
+```{r}
+insurance_data %>% 
+  mutate(married = ifelse(married == "no", "Нет брака", "В браке")) %>% 
+  select(c("married", "insurance")) %>% 
+  table %>% 
+  as.data.frame.matrix -> married_table
+
+married_table <- cbind("Семейное положение" = rownames(married_table), married_table)
+rownames(gend_table) <- NULL
+
+
+ft_married <- flextable(married_table)
+ft_married <- autofit(ft_married)
+ft_married <- theme_vanilla(ft_married)
+ft_married <- add_header_lines(ft_married, values = "Семейное положение и наличие страховки")
+ft_married <- align(ft_married, i = 1, part = "header", align = "center")
+ft_married
+
+```
 
 
 
