--- a/hackaton.Rmd
+++ b/hackaton.Rmd
@@ -301,7 +301,7 @@ insurance_data %>%
   riskratio(., rev = "both") -> rr_gender
 
 rr_gender$measure
-cat("RR показывает, что у женщин есть страховка в 1.067 раз чаще")
+cat("RR показывает, что у женщин есть страховка в 1.067 раз чаще CI (1.045 - 1.089)")
 
 ```
 
@@ -348,7 +348,7 @@ insurance_data %>%
   riskratio(., rev = "columns") -> rr_married
 
 rr_married$measure
-cat("RR показывает, что у людей в браке есть страховка в 1.2 раза чаще")
+cat("RR показывает, что у людей в браке есть страховка в 1.2 раза чаще, CI(1.179 - 1.237)")
 
 ```
 
