--- a/hackaton.Rmd
+++ b/hackaton.Rmd
@@ -598,3 +598,86 @@ insurance_data %>% count(education)
 
 
 
+# Визуализация результатов
+```{r fig.width=14, fig.height=12}
+calculate_rr_universal <- function(data, exposure_var, outcome_var = "insurance") {
+
+  tab <- data %>% 
+    select(all_of(c(exposure_var, outcome_var))) %>% 
+    table()
+  
+  levels <- rownames(tab)
+  results <- data.frame()
+
+  if(length(levels) == 2) {
+    rr_result <- riskratio(tab, rev = "columns")
+
+    results <- as.data.frame(rr_result$measure) %>%
+      mutate(
+        variable = exposure_var,
+        level = rownames(.),
+        comparison = paste(levels[1], "vs", levels[2]),
+        reference = levels[1],
+        .before = 1
+      ) %>%
+      rename(
+        rr = estimate,
+        rr_lower = lower,
+        rr_upper = upper
+      )
+    
+  } else {
+
+    for(i in 1:(length(levels)-1)) {
+      for(j in (i+1):length(levels)) {
+        pair_tab <- tab[c(i, j), ]
+        rr_result <- riskratio(pair_tab, rev = "columns")
+        
+        pair_results <- as.data.frame(rr_result$measure) %>%
+          mutate(
+            variable = exposure_var,
+            level = rownames(.),
+            comparison = paste(levels[i], "vs", levels[j]),
+            reference = levels[i],
+            .before = 1
+          ) %>%
+          rename(
+            rr = estimate,
+            rr_lower = lower,
+            rr_upper = upper
+          )
+        
+        results <- rbind(results, pair_results)
+      }
+    }
+  }
+  
+  return(results)
+}
+
+rr_results <- data.frame()
+
+for(var in categorical_vars) {
+  var_results <- calculate_rr_universal(insurance_data, var)
+  rr_results <- rbind(rr_results, var_results)
+}
+
+
+rr_clean <- rr_results %>%  filter(!is.na(rr_lower)) %>% 
+  arrange(variable, rr)
+
+ggplot(rr_clean, aes(x = rr, y = reorder(comparison, rr))) +
+  geom_point(size = 3, alpha = 0.8) +
+  geom_errorbar(aes(xmin = rr_lower, xmax = rr_upper), 
+                 width = 0.2, alpha = 0.6, orientation='y') +
+  geom_vline(xintercept = 1, linetype = "dashed", color = "red") +
+  facet_wrap(~ variable, scales = "free_y", ncol = 2) +
+  labs(title = "Отношения рисков (переменная vs наличие страховки)",
+       x = "Relative Risk (RR) с 95% ДИ",
+       y = "Сравнение") +
+  theme_minimal() +
+  theme(axis.text.y = element_text(size = 12))
+
+```
+
+
