--- a/hackaton.Rmd
+++ b/hackaton.Rmd
@@ -1,11 +1,22 @@
 ---
 title: "Hackaton"
-author: "Danil Tukanov"
+author: "Danil Tukanov, Sergei Vladimirov, Anna Kalinina"
 date: "2025-11-02"
-output: html_document
+output:
+  html_document:
+    toc: true
+    toc_depth: 2
+    toc_float: true
+  pdf_document:
+    toc: true
+    toc_depth: 2
 ---
 
-```{r first chunk}
+```{r first chunk, include = FALSE}
+knitr::opts_chunk$set(echo = FALSE, 
+                      warning = FALSE,
+                      message = FALSE)
+
 library(tidyverse)
 library(gtsummary)
 library(forcats)
@@ -23,7 +34,8 @@ library(epitools)
 
 set_flextable_defaults(table.layout = "autofit")
 ```
-#Чтение данных
+
+# Струкутура данных
 
 ```{r}
 insurance_data <- read_csv("data/HealthInsurance.csv")
@@ -33,7 +45,8 @@ insurance_data %>%
 
 ```
 
-#Описание данных
+
+# Описание данных
 Сформировать таблицы с базовыми описательными статистиками.
 
 ## Черновик таблицы 1
@@ -127,7 +140,8 @@ table_1
 ```
 
 
-#Визуализация данных
+# Визуализация данных
+
 Визуализировать распределения значений признаков средствами ggplot2 и сопутствующих пакетов.
 Подобрать и реализовать средства для визуальной оценки взаимосвязи между наличием МС и собранными признаками пациентов.
 
@@ -292,7 +306,7 @@ for (col_name in categorical_vars) {
 ```
 
 
-#Анализ данных
+# Анализ данных
 Выбрать и реализовать методы однофакторного анализа для количественной оценки взаимосвязи между наличием МС и собранными признаками пациентов (помните, что взаимосвязь - это не только p-значения, но и доверительные интервалы!).
 
 Исследование кросс-секционное. Для оценки независимости групп с категориальными признаками будет использован тест хи-квадрат, для оценки силы ассоциации среди категориальных переменных будет использован RR.
@@ -353,7 +367,7 @@ cat("RR показывает, что у женщин есть страховка
 ```
 
 
-##Семейное положение и страховка
+## Семейное положение и страховка
 
 ```{r}
 insurance_data %>% 
@@ -451,7 +465,7 @@ insurance_data %>%
 rr_selfemp1$measure
 cat("RR показывает, что у не самозанятых есть страховка в 1.19 раз чаще, CI(1.137 - 1.236)")
 ```
-##Здоровье и страховка
+## Здоровье и страховка
 
 ```{r}
 insurance_data %>% 
@@ -496,7 +510,7 @@ insurance_data %>%
 rr_selfemp$measure
 cat("RR показывает, что у здоровых есть страховка в 1.11 раза чаще, CI(1.055 - 1.164)")
 ```
-##Регион и страховка
+## Регион и страховка
 
 ```{r}
 insurance_data %>% 
@@ -576,7 +590,7 @@ rr_ne_w$measure
 cat("RR показывает, что у проживающих на западе есть страховка в 0.906 раза реже, чем у тех, кто проживает на северовостоке CI(0.877 - 0.936)")
 ```
 
-##Образование и страховка
+## Образование и страховка
 Образование можно представить как категориальную порядковую переменную, ведь PhD явно лучше bachelor. Можно попробовать применить тест Манна-Уитни
 Нулевая гипотеза: распределение уровней образования одинаково для обеих групп (со страховкой и без)
 Альтернативная гипотеза: распределение уровней образования различно для групп
@@ -769,7 +783,7 @@ rr_age$measure
 cat("RR показывает, что у людей старше 40 лет в 1.12 раз чаще встречается страховка CI(1.106324 - 1.152467)")
 ```
 
-##Число членов семьи и страховка
+## Число членов семьи и страховка
 Предлагаю тоже поделить на категории, если в семье 1 человек, то он одиночка, если 2, то значит есть партнер, если больше, значит есть еще и дети. 
 
 ```{r}
@@ -950,9 +964,9 @@ forestplot(
   zero = 1
 )
 ```
-```{r}
-library(ggplot2)
 
+
+```{r}
 forest_data <- data.frame(
   variable = c("Мужской vs\n Женский пол", "Европеоидные vs\nАфроамериканцы", "Юг vs\nСредний Запад", "Запад vs\nСредний Запад", 
                "Наличие брака", "Здоровый статус", "Аттестат (GED) vs\nОтсутствие образования",
